ServiceMesh/gateway.yml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: my-ingress-gateway
spec:
  selector:
    app: my-gateway-controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ns1/*"
    - "ns2/foo.bar.com"
